[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Tai Lucas <tglucas@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
app = "app.__main__:main"
ftp = "app.ftp_server:main"

[tool.poetry.dependencies]
python = "^3.11"
awscli = "^1.32.94"
boto3 = "^1.34.94"
pika = "^1.3.2"
python-dateutil = "^2.9.0.post0"
pillow = "^10.3.0"
pytz = "^2024.1"
pyzmq = "^26.0.2"
pydrive = "^1.3.1"
pyftpdlib = "^1.5.9"
requests = "^2.31.0"
sentry-sdk = "^2.0.1"
watchdog = "^4.0.0"
tailucas-pylib = "^0.4.0"
cachetools = "^5.3.3"
pydantic = "^2.7.1"
onepasswordconnectsdk = "^1.5.1"
unleashclient = "^5.12.2"
torch = {version = "^2.4.0+cpu", source = "pytorch-cpu"}
torchvision = {version = "^0.19.0+cpu", source = "pytorch-cpu"}
ultralytics = "^8.2.73"
opencv-python-headless = "^4.10.0.84"


[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
